# audio-aligner

./: README.md  pyproject.toml
.github/workflows/: build-release.yml
audio_aligner/: main.py  processing.py  video.py
